# TestPrivateUnitTest

./: CMakeLists.txt
apps/: main.cpp
include/testclass/: TestClass.h
src/testclass/: CMakeLists.txt  TestClass.cpp
tests/: CMakeLists.txt
tests/testclass/: TestClass_Test.cpp
